# Signal_client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/workflows/: CI_CD.yml  development.yml  release.yml
src/: account_management.rs  app.rs  args.rs  captcha_text.txt  cli.rs  config.rs  contacts.rs  devices.rs  env.rs  groups.rs  lib.rs  logger.rs  main.rs  messages.rs  notifications.rs  paths.rs  profile.rs  retry_manager.rs  sending_text.rs  tui.rs  ui.rs
src/app/: text_state.rs  utils.rs
src/messages/: attachments.rs  receive.rs  send.rs
src/messages/receive/: contact.rs  group.rs
src/messages/send/: .groups.rs.swp  contact.rs  contacts.rs  group.rs  groups.rs
src/sending/: sending_text.rs
src/ui/: account_selector.rs  captcha.rs  captcha_text.txt  chat.rs  contact_list.rs  frame.rs  group_info.rs  input.rs  linking.rs  main.rs  mod.rs  options.rs  ui.rs  utils.rs
tests/: README.md
tests/cucumber/: main.rs
tests/cucumber/fixtures/: builder.rs  config.rs  mod.rs  setup.rs
tests/features/: cli_accounts.feature  cli_contacts.feature  cli_groups.feature  cli_messaging.feature  cli_profile.feature
tests/fixtures/: test_config.json
tests/fixtures/accounts/config/: config.json
