[package]
name = "signal_client"
version = "0.1.0"
edition = "2021"

[dependencies]
presage = { git = "https://github.com/whisperfish/presage", tag = "0.7.0" }
presage-store-sled = { git = "https://github.com/whisperfish/presage", tag = "0.7.0" }
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
anyhow = "1.0.95"
futures = "0.3.31"
qr2term = "=0.1.2"
clap = { version = "4.5.23", features = ["derive"] }
url = "2.5.4"
curve25519-dalek = "4.1.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde_json = "1.0.133"
ratatui-image = "5.0.0"
image = "0.25"
tui-qrcode = "0.1.1"
qrcode = "0.14.1"
mime_guess = "2.0.5"
chrono = "0.4.40"
viuer = { version = "0.9.0", features = ["print-file"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

